src/test/deca/context/invalid/created/binary_exp/op_bool/and_float_float.deca
// Description :
//    test and entre un float et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche float. Type droit float Type attendu: ‘boolean’
class A{}
{
float a;
float b;
boolean c = a && b;
}
